Added user surveys list page and tab in navbar, and remade migrations

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ yarn-error.log
 Network Trash Folder
 Temporary Items
 .apdisk
+event_surveys_project/accounts/migrations/__pycache__/__init__.cpython-312.pyc
+event_surveys_project/accounts/migrations/__pycache__/0001_initial.cpython-312.pyc
+event_surveys_project/core/migrations/__pycache__/__init__.cpython-312.pyc
+event_surveys_project/surveys/migrations/__pycache__/__init__.cpython-312.pyc
+event_surveys_project/surveys/migrations/__pycache__/0001_initial.cpython-312.pyc
