--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "bootstrap": "^5.3.3",
         "jquery": "^3.7.1",
+        "jquery-ui": "^1.13.3",
         "node": "^22.3.0"
     },
     "keywords": [],
